Teste UserController findByAll implementado