@@ -11,6 +11,7 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(value = "/user")
@@ -29,7 +30,7 @@ public class UserController {
 
     @GetMapping
     public ResponseEntity<List<UserDTO>> findAll(){
-        List<UserDTO> listDTO = userService.findAll().stream().map(x -> mapper.map(x, UserDTO.class)).toList();
+        List<UserDTO> listDTO = userService.findAll().stream().map(x -> mapper.map(x, UserDTO.class)).collect(Collectors.toList());
         return ResponseEntity.ok().body(listDTO);
     }
 
